log/build_2024-07-20_23-54-48/arduinobot_py_examples/stderr.log
  File "/home/monster/arduinobot_ws/install/arduinobot_py_examples/lib/python3.10/site-packages/arduinobot_py_examples/simple_parameter.py", line 14
    	def paramChangeCallback(self params)
    	                             ^^^^^^
SyntaxError: invalid syntax

